# Applied_Computer_Graphics_2024S

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
doc/: setup_eigen.md  setup_env.md  setup_glfw.md  submit.md
src/: parse_svg.h  util_opengl.h  util_triangle_mesh.h
task00/: CMakeLists.txt  README.md  main.cpp
task01/: CMakeLists.txt  README.md  main.cpp
task02/: CMakeLists.txt  README.md  main.cpp
task03/: CMakeLists.txt  README.md  main.cpp
task04/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
task05/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
task06/: CMakeLists.txt  README.md  main.cpp  util.h
task07/: CMakeLists.txt  README.md  main.cpp
task08/: README.md  main.py  parse_gltf.py  requirements.txt  util_for_task08.py
task09/: README.md  main.py  requirements.txt  util_for_task09.py
